styled the navbar and the main section and made some adjusts to the html file

--- a/index.html
+++ b/index.html
@@ -4,38 +4,50 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tutorial</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <img src="images/food.jpg" height="100" width="100">
-
-        <section>
-
-            <div>
+    <nav>
+        <img src="images/food-removebg-preview.png" height="70px" width="70px" margin-right="200px">
+        <div class="navigation">
+            <div class="logo">
                 <div>Home</div>
                 <div>Hot Item</div>
-                <div>Menues</div>
+                <div>Menus</div>
                 <div>Contact Us</div>
              </div>
-             <div>join</div>
-             <img src="images/bag.jpg" height="20" width="20">
-        </section>
-
-    </header>
+            <div class="btn"><h4>Join</h4></div>
+            <img src="images/bag.jpg">
+        </div>
+    </nav>
 
 
     <main>
-        <section>
-            <div>
-                <h1>Welcome to The world of Testy & Fresh Food</h1>
-                <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, quas recusandae non ab ducimus praesentium eos consequatur est velit neque! Libero minima voluptatum excepturi necessitatibus deserunt laborum aut cupiditate culpa!</h5>
-            </div>
-            <div>
-                <input type="text" placeholder="search,burger">
+        <section class="main">
+            <div class="box1" id="box">
+                <div class="text" id="box">
+                    <div class="big-text" id="box2">
+                    <span class="welcome">Welcome</span> to</div>
+                    <div class="big-text" id="box2">
+                        The world of
+                    </div>
+                    <div class="big-text">
+                         Zesty & Fresh Food.
+                    </div>
+                    <div id="box3">
+                    Lorem ipsum dolor sit amet consectetur adipisicin
+                    cusandae non ab ducimus 
+                    praesentium eos consequatur est velit neque! 
+                    praesentium eos consequatur est velit neque! 
+                    </div>
+                </div>
+            <div class="search">
+                <input type="text" placeholder="Search, Burger">
                 <button>search</button>
             </div>
-            <div>
-                <img src="images/burger2.jpg" height="200" width="200">
+            </div>
+            <div class="image">
+                <img src="images/burger2-removebg-preview.png" height="600px" width="600px">
             </div>
         </section>
 
